syntax = "proto3";
package bpmn_lite.v1;

service BpmnLite {
    // Model lifecycle
    rpc Compile(CompileRequest) returns (CompileResponse);

    // Process lifecycle
    rpc StartProcess(StartRequest) returns (StartResponse);
    rpc Signal(SignalRequest) returns (SignalResponse);
    rpc Cancel(CancelRequest) returns (CancelResponse);
    rpc Inspect(InspectRequest) returns (InspectResponse);

    // Job worker protocol
    rpc ActivateJobs(ActivateJobsRequest) returns (stream JobActivationMsg);
    rpc CompleteJob(CompleteJobRequest) returns (CompleteJobResponse);
    rpc FailJob(FailJobRequest) returns (FailJobResponse);

    // Event stream
    rpc SubscribeEvents(SubscribeRequest) returns (stream LifecycleEvent);
}

// --- Compile ---

message CompileRequest {
    string bpmn_xml = 1;
    bool validate_only = 2;
}

message CompileResponse {
    bytes bytecode_version = 1;
    repeated Diagnostic diagnostics = 2;
}

message Diagnostic {
    string severity = 1;
    string message = 2;
    string element_id = 3;
}

// --- Start ---

message StartRequest {
    string process_key = 1;
    bytes bytecode_version = 2;
    string domain_payload = 3;
    bytes domain_payload_hash = 4;
    map<string, ProtoValue> orch_flags = 5;
    string correlation_id = 6;
}

message StartResponse {
    string process_instance_id = 1;
}

// --- Signal ---

message SignalRequest {
    string process_instance_id = 1;
    string message_name = 2;
    ProtoValue correlation_key = 3;
    bytes payload = 4;
    string msg_id = 5;
}

message SignalResponse {}

// --- Cancel ---

message CancelRequest {
    string process_instance_id = 1;
    string reason = 2;
}

message CancelResponse {}

// --- Inspect ---

message InspectRequest {
    string process_instance_id = 1;
}

message InspectResponse {
    string state = 1;
    repeated FiberInfo fibers = 2;
    repeated WaitInfo waits = 3;
    bytes bytecode_version = 4;
    string domain_payload_hash = 5;
}

message FiberInfo {
    string fiber_id = 1;
    uint32 pc = 2;
    string wait_state = 3;
}

message WaitInfo {
    string fiber_id = 1;
    string wait_type = 2;
    string detail = 3;
}

// --- Job Worker ---

message ActivateJobsRequest {
    repeated string task_types = 1;
    int32 max_jobs = 2;
    int64 timeout_ms = 3;
    string worker_id = 4;
}

message JobActivationMsg {
    string job_key = 1;
    string process_instance_id = 2;
    string task_type = 3;
    string service_task_id = 4;
    string domain_payload = 5;
    bytes domain_payload_hash = 6;
    map<string, ProtoValue> orch_flags = 7;
    int32 retries_remaining = 8;
}

message CompleteJobRequest {
    string job_key = 1;
    string domain_payload = 2;
    bytes domain_payload_hash = 3;
    map<string, ProtoValue> orch_flags = 4;
}

message CompleteJobResponse {}

message FailJobRequest {
    string job_key = 1;
    string error_class = 2;
    string message = 3;
    int64 retry_hint_ms = 4;
}

message FailJobResponse {}

// --- Events ---

message SubscribeRequest {
    string process_instance_id = 1;
}

message LifecycleEvent {
    uint64 sequence = 1;
    string event_type = 2;
    string process_instance_id = 3;
    string payload_json = 4;
}

// --- Shared types ---

message ProtoValue {
    oneof kind {
        bool bool_value = 1;
        int64 i64_value = 2;
        string str_value = 3;
    }
}
